--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 
 <body>
     <h1>The Beatles</h1>
-    <h2>Sgt. pepper's lonely hearts club band</h2>
-    <p>It was 20 years ago today
-        Sergeant Pepper taught the band to play
-        They've been going in and out of style
-        But they're guaranteed to raise a smile
-        So may I introduce to you
-        The act you've know for all these years
-        Sergeant Pepper's Lonely Hearts Club Band
-        We're Sergeant Pepper's Lonely Hearts Club Band
-        We hope you will enjoy the show
-        Sergeant Pepper's Lonely Hearts Club Band
-        Sit back and let the evening go
-        Sergeant Pepper's Lonely, Sergeant Pepper's Lonely
+    <h2>Sgt. Pepper's lonely hearts club band</h2>
+    <p>It was 20 years ago today <br>
+        Sergeant Pepper taught the band to play<br>
+        They've been going in and out of style<br>
+        But they're guaranteed to raise a smile<br>
+        So may I introduce to you<br>
+        The act you've know for all these years<br>
+        Sergeant Pepper's Lonely Hearts Club Band<br><br>
+        We're Sergeant Pepper's Lonely Hearts Club Band<br>
+        We hope you will enjoy the show<br>
+        Sergeant Pepper's Lonely Hearts Club Band<br>
+        Sit back and let the evening go<br>
+        Sergeant Pepper's Lonely, Sergeant Pepper's Lonely<br>
         Sergeant Pepper's Lonely Hearts Club Band</p>
 </body>
 
