--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         Sergeant Pepper's Lonely, Sergeant Pepper's Lonely<br>
         Sergeant Pepper's Lonely Hearts Club Band</p>
     <p>
-        by Paul Mccartney / John Lennon
+        by Paul Mccartney / John Lennon and / George Martin 
     </p>
 </body>
 
